alignment fixes and reorganize card layout

--- a/style.css
+++ b/style.css
@@ -5,7 +5,17 @@ body{
   font-family:'Bitcount Single','Courier New', Courier, monospace;
   color:rgb(255, 248, 248);
 }
+.parent{
+display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;  
+  width: 100%;
+
+}
 .loader {
+
+
   width: 60px;
   aspect-ratio: 2;
   --_g: no-repeat radial-gradient(circle closest-side,#ffffff 90%,#0000);
@@ -23,20 +33,21 @@ body{
     80%{background-position:0%  50%, 50%  50%,100% 100%}
 }
 h1{
+  text-align: center;
   font-size:40px;
 }
 .container{
-  display:flex;
+ display:flex;
+ align-items:center;
+ justify-content:center;
 
 }
 
 input{
   font-family:'Bitcount Single','Courier New', Courier, monospace;
   color: Black;
- 
   font-size:14px;
-   
-  width:400px;
+  width:500px;
   height:45px;
   border-radius:42px;
   border-width:10px;
@@ -57,10 +68,36 @@ button{
   height:42px;
   border-radius:20px;
   border:solid;
-  background-color:white;
+  background-color:rgb(232, 240, 254);
   box-shadow:1px 1px  rgb(73, 73, 73);
   position:relative;
   left:10px;
   cursor:pointer;
 
 }
+.current{
+  width:400px;
+  border:solid;
+  border-color:rgb(73, 73, 73);
+  padding:20px 25px 25px 25px;
+  margin:47px ;
+  margin-left:390px ;
+  height: 289px;
+  background-color: rgb(232, 240, 254);
+  color:black;
+}
+.situ{
+  font-size:20px;
+}
+.results{
+
+  padding:31px 20px 28px 20px;
+  font-family:Bitcount single,'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size:16px;
+  line-height: 1.5;
+  
+
+}
+
+
+
